--- a/gradle.properties
+++ b/gradle.properties
@@ -2,11 +2,11 @@
 org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
-minecraft_version=1.16.1
-yarn_mappings=1.16.1+build.21
-loader_version=0.11.6
+minecraft_version=1.17.1
+yarn_mappings=1.17.1+build.61
+loader_version=0.12.1
 # Mod Properties
-mod_version=1.0.6
+mod_version=1.0.0-1.17
 maven_group=gregor0410
 archives_base_name=lazystronghold
 
